# ai-news-digest

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  config.yaml.example  docker-compose.yml  pyproject.toml
.github/workflows/: run-digest.yml
ai_news_digest/: __init__.py  cache.py  collector.py  mailer.py  main.py  models.py  renderer.py  summarizer.py
ai_news_digest/templates/: digest.html
